--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.13",
-    "expo-status-bar": "~1.6.0",
+    "@expo/webpack-config": "~0.16.2",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
+    "@react-navigation/stack": "^6.3.18",
+    "expo": "^44.0.6",
+    "expo-status-bar": "~1.2.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-dom": "17.0.1",
+    "react-native": "0.72.5",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
